@@ -1259,6 +1259,7 @@ Nikita Vetoshkin
 Al Vezza
 Jacques A. Vidrine
 John Viega
+Dino Viehland
 Kannan Vijayan
 Kurt Vile
 Norman Vine
